@@ -1,4 +1,4 @@
-$NetBSD: CHANGES,v 1.12506 2006/01/14 12:40:18 wulf Exp $
+$NetBSD: CHANGES,v 1.12507 2006/01/14 13:56:49 wulf Exp $
 
 Changes to the packages collection and infrastructure in 2006:
 
@@ -286,3 +286,4 @@ Changes to the packages collection and infrastructure in 2006:
 	Updated ham/yaesu to 0.13 [wulf 2006-01-14]
 	Updated ham/tlf to 0.9.27 [wulf 2006-01-14]
 	Updated ham/cwtext to 0.95 [wulf 2006-01-14]
+	Updated misc/qbrew to 0.3.5 [wulf 2006-01-14]
